objects/ccrz__E_ProductMedia__c.object
<CustomObject>
    <description>Encapsulates media such as hero, thumbnail images, product brochures, owner&apos;s manuals, assembly guides, and videos associated with a product. Media&apos;s source could be in a form of attachment, static resource, or external resource(URI).</description>
    <fields>
        <fullName>ccrz__AltMessage__c</fullName>
        <description>Used in the alt attribute of the Image tag to provide search optimization.</description>
        <label>AltMessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag determining whether or not this media record is active</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The last date for which this media record is active. This is the last date the image will be displayed</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__FilePath__c</fullName>
        <description>Full file path for the image. If this is an attachment, then it would be the file name only. If it is a static resource, then the path within the resource</description>
        <label>File Path</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <defaultValue>&quot;en_US&quot;</defaultValue>
        <description>Locale corresponding to this entry. Different locales can have different product images</description>
        <label>Locale</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__MediaType__c</fullName>
        <description>Determines where this image is displayed. Values are &quot;Product Image&quot;, &quot;Product Image Thumbnail&quot;, &quot;Product Search Image&quot;, &quot;Alternate Image&quot;</description>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate Images</fullName>
                </value>
                <value>
                    <fullName>Alternate Thumbnails</fullName>
                </value>
                <value>
                    <fullName>Datasheets</fullName>
                </value>
                <value>
                    <fullName>Safety Documents</fullName>
                </value>
                <value>
                    <fullName>Sales Brochures</fullName>
                </value>
                <value>
                    <fullName>Product Search Image</fullName>
                </value>
                <value>
                    <fullName>Owner&apos;s Manuals</fullName>
                </value>
                <value>
                    <fullName>Assembly Guides</fullName>
                </value>
                <value>
                    <fullName>JPG Image</fullName>
                </value>
                <value>
                    <fullName>Product Image</fullName>
                </value>
                <value>
                    <fullName>Product Image Thumbnail</fullName>
                </value>
                <value>
                    <fullName>Flash Files</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>SVG Interactive Diagram</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ProductDescription__c</fullName>
        <description>The field acts as a tool-tip when the user mouse overs the image of the product. Used for optimization in the search engine.</description>
        <label>Product_Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductMediaId__c</fullName>
        <description>External id for this entry - can be used for updates</description>
        <externalId>true</externalId>
        <label>Product Media Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__ProductMediaSource__c</fullName>
        <description>Source of the image. Values are &quot;URL&quot;, &quot;Static Resource&quot; and &quot;Attachment&quot;</description>
        <label>Product Media Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Static Resource</fullName>
                </value>
                <value>
                    <fullName>URI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <description>Reference to the category entry to which this media corresponds</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>E_ProductMedias</relationshipLabel>
        <relationshipName>E_ProductMedias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Determines the ordering of the images in the case of Alternate images on the product detail page</description>
        <label>Sequence</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The start date for which this media record is active. This is the first date the image will be displayed</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__StaticResourceName__c</fullName>
        <description>Pointing to static resource containing the images</description>
        <inlineHelpText>1. Use prefix &quot;c__&quot; for static resource defined in subscriber org
2. StaticResource name without prefix refers to static resource inside managed package</inlineHelpText>
        <label>Static Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__URI__c</fullName>
        <description>If the source is a URL, contains the full URL to the image. This should reference a location with secure storage (SSL defined)</description>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Product Media</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__MediaType__c</columns>
        <columns>ccrz__ProductMediaSource__c</columns>
        <columns>ccrz__Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Product Media Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Media</pluralLabel>
    <recordTypes>
        <fullName>ccrz__Datasheet</fullName>
        <active>true</active>
        <description>Datasheet</description>
        <label>Datasheet</label>
    </recordTypes>
    <recordTypes>
        <fullName>ccrz__Image</fullName>
        <active>true</active>
        <description>Image</description>
        <label>Image</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>